--- a/use_cases/IES_Feb23/data/data_cleaner.ipynb
+++ b/use_cases/IES_Feb23/data/data_cleaner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,22 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "case = \"NYISO_FitzPatrick\"\n",
+    "case = \"NYISO_fitzpatrick\"\n",
+    "min_year = 2012\n",
+    "max_year = 2021\n",
+    "end_year = 2049\n",
+    "data_type = \"DA\"\n",
     "#case = \"NYISO_Ginna\"\n",
-    "folder = os.path.join(\"./electricity_markets/\",case)\n",
-    "files = os.listdir(folder)\n",
-    "dest_folder = os.path.join(folder,\"original_data/\")\n",
-    "if not os.path.exists(dest_folder):\n",
-    "  os.makedirs(dest_folder)"
+    "dest_folder = os.path.join(\"./electricity_markets/\",case)\n",
+    "original_data_folder = os.path.join(dest_folder,\"original_data/\")\n",
+    "original_files = os.listdir(original_data_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +44,15 @@
     "      todrop.append(c)\n",
     "  df.drop(columns=todrop, axis=1, inplace=True)\n",
     "  df['hour'] = [i for i in range(1,1+len(df))]\n",
+    "  # Remove additional day if necessary\n",
+    "  index_todrop= df[ df['hour'] >= 8761 ].index\n",
+    "  df.drop(index_todrop, inplace = True)\n",
     "  return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -68,18 +73,119 @@
     }
    ],
    "source": [
-    "for f in files:\n",
+    "files_list = []\n",
+    "for f in original_files:\n",
     "  if f.endswith('csv'):\n",
-    "    present_file = os.path.join(folder,f)\n",
-    "    print(present_file)\n",
-    "    df = pd.read_csv(present_file)\n",
-    "    df = cleanup_data(df)\n",
-    "    # Move old file\n",
-    "    if not os.path.exists(os.path.join(dest_folder,f)):\n",
-    "      shutil.move(present_file, os.path.join(dest_folder,f))\n",
-    "    # Rewrite\n",
-    "    df.to_csv(present_file, index=False)\n",
-    "    #print(df)\n"
+    "    fsplit = f.split(\"_\")\n",
+    "    year = int(fsplit[0])\n",
+    "    if min_year <= year and max_year >= year:\n",
+    "      present_file = os.path.abspath(os.path.join(original_data_folder,f))\n",
+    "      files_list.append(present_file)\n",
+    "      df = pd.read_csv(present_file)\n",
+    "      df = cleanup_data(df)\n",
+    "      # Move write cleaned-up data to destination folder\n",
+    "      clean_file = os.path.join(dest_folder,f)\n",
+    "      print(clean_file)\n",
+    "      df.to_csv(clean_file, index=False)\n",
+    "      #print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the pointer file for ARMA in train folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>scaling</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>filename</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>/Users/garrm/FORCE/use_cases/IES_Feb23/data/el...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2046</td>\n",
+       "      <td>/Users/garrm/FORCE/use_cases/IES_Feb23/data/el...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2047</td>\n",
+       "      <td>/Users/garrm/FORCE/use_cases/IES_Feb23/data/el...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2048</td>\n",
+       "      <td>/Users/garrm/FORCE/use_cases/IES_Feb23/data/el...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2049</td>\n",
+       "      <td>/Users/garrm/FORCE/use_cases/IES_Feb23/data/el...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    scaling  Year                                           filename\n",
+       "33        1  2045  /Users/garrm/FORCE/use_cases/IES_Feb23/data/el...\n",
+       "34        1  2046  /Users/garrm/FORCE/use_cases/IES_Feb23/data/el...\n",
+       "35        1  2047  /Users/garrm/FORCE/use_cases/IES_Feb23/data/el...\n",
+       "36        1  2048  /Users/garrm/FORCE/use_cases/IES_Feb23/data/el...\n",
+       "37        1  2049  /Users/garrm/FORCE/use_cases/IES_Feb23/data/el..."
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plant = case.split(\"_\")[1]\n",
+    "pointer_file = os.path.join(\"../train/\",\"ARMA_pointer_{}_{}_{}_{}.csv\".format(plant,str(min_year),str(max_year),data_type))\n",
+    "pointer_file\n",
+    "pointer_df = pd.DataFrame()\n",
+    "pointer_df['scaling'] = [1 for i in range(min_year, end_year+1)]\n",
+    "pointer_df['Year'] = [i for i in range(min_year, end_year+1)]\n",
+    "pointer_df['filename'] = [ files_list[i%len(files_list)] for i in range(end_year+1-min_year)]\n",
+    "pointer_df.to_csv(pointer_file, index=False)"
    ]
   }
  ],
