Cleaned up data for Ginna

--- a/use_cases/IES_Feb23/data/data_cleaner.ipynb
+++ b/use_cases/IES_Feb23/data/data_cleaner.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "case = \"NYISO_fitzpatrick\"\n",
+    "case = \"NYISO_ginna\"\n",
     "min_year = 2012\n",
     "max_year = 2021\n",
     "end_year = 2049\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,23 +52,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./electricity_markets/NYISO_FitzPatrick/2012_fitzpatrick_DA.csv\n",
-      "./electricity_markets/NYISO_FitzPatrick/2021_fitzpatrick_DA.csv\n",
-      "./electricity_markets/NYISO_FitzPatrick/2017_fitzpatrick_DA.csv\n",
-      "./electricity_markets/NYISO_FitzPatrick/2019_fitzpatrick_DA.csv\n",
-      "./electricity_markets/NYISO_FitzPatrick/2014_fitzpatrick_DA.csv\n",
-      "./electricity_markets/NYISO_FitzPatrick/2018_fitzpatrick_DA.csv\n",
-      "./electricity_markets/NYISO_FitzPatrick/2015_fitzpatrick_DA.csv\n",
-      "./electricity_markets/NYISO_FitzPatrick/2016_fitzpatrick_DA.csv\n",
-      "./electricity_markets/NYISO_FitzPatrick/2020_fitzpatrick_DA.csv\n",
-      "./electricity_markets/NYISO_FitzPatrick/2013_fitzpatrick_DA.csv\n"
+      "./electricity_markets/NYISO_ginna/2017_ginna_DA.csv\n",
+      "./electricity_markets/NYISO_ginna/2021_ginna_DA.csv\n",
+      "./electricity_markets/NYISO_ginna/2016_ginna_DA.csv\n",
+      "./electricity_markets/NYISO_ginna/2020_ginna_DA.csv\n",
+      "./electricity_markets/NYISO_ginna/2013_ginna_DA.csv\n",
+      "./electricity_markets/NYISO_ginna/2014_ginna_DA.csv\n",
+      "./electricity_markets/NYISO_ginna/2015_ginna_DA.csv\n",
+      "./electricity_markets/NYISO_ginna/2012_ginna_DA.csv\n",
+      "./electricity_markets/NYISO_ginna/2018_ginna_DA.csv\n",
+      "./electricity_markets/NYISO_ginna/2019_ginna_DA.csv\n"
      ]
     }
    ],
@@ -99,84 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>scaling</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>filename</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2045</td>\n",
-       "      <td>/Users/garrm/FORCE/use_cases/IES_Feb23/data/el...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2046</td>\n",
-       "      <td>/Users/garrm/FORCE/use_cases/IES_Feb23/data/el...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2047</td>\n",
-       "      <td>/Users/garrm/FORCE/use_cases/IES_Feb23/data/el...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2048</td>\n",
-       "      <td>/Users/garrm/FORCE/use_cases/IES_Feb23/data/el...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2049</td>\n",
-       "      <td>/Users/garrm/FORCE/use_cases/IES_Feb23/data/el...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    scaling  Year                                           filename\n",
-       "33        1  2045  /Users/garrm/FORCE/use_cases/IES_Feb23/data/el...\n",
-       "34        1  2046  /Users/garrm/FORCE/use_cases/IES_Feb23/data/el...\n",
-       "35        1  2047  /Users/garrm/FORCE/use_cases/IES_Feb23/data/el...\n",
-       "36        1  2048  /Users/garrm/FORCE/use_cases/IES_Feb23/data/el...\n",
-       "37        1  2049  /Users/garrm/FORCE/use_cases/IES_Feb23/data/el..."
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plant = case.split(\"_\")[1]\n",
     "pointer_file = os.path.join(\"../train/\",\"ARMA_pointer_{}_{}_{}_{}.csv\".format(plant,str(min_year),str(max_year),data_type))\n",
