Bug in pointer file generation, original files instead of cleaned up

--- a/use_cases/IES_Feb23/data/data_cleaner.ipynb
+++ b/use_cases/IES_Feb23/data/data_cleaner.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,23 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./electricity_markets/NYISO_ginna/2017_ginna_DA.csv\n",
-      "./electricity_markets/NYISO_ginna/2021_ginna_DA.csv\n",
-      "./electricity_markets/NYISO_ginna/2016_ginna_DA.csv\n",
-      "./electricity_markets/NYISO_ginna/2020_ginna_DA.csv\n",
-      "./electricity_markets/NYISO_ginna/2013_ginna_DA.csv\n",
-      "./electricity_markets/NYISO_ginna/2014_ginna_DA.csv\n",
-      "./electricity_markets/NYISO_ginna/2015_ginna_DA.csv\n",
-      "./electricity_markets/NYISO_ginna/2012_ginna_DA.csv\n",
-      "./electricity_markets/NYISO_ginna/2018_ginna_DA.csv\n",
-      "./electricity_markets/NYISO_ginna/2019_ginna_DA.csv\n"
+      "['/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2012_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2013_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2014_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2015_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2016_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2017_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2018_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2019_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2020_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2021_ginna_DA.csv']\n"
      ]
     }
    ],
@@ -80,14 +71,15 @@
     "    year = int(fsplit[0])\n",
     "    if min_year <= year and max_year >= year:\n",
     "      present_file = os.path.abspath(os.path.join(original_data_folder,f))\n",
-    "      files_list.append(present_file)\n",
     "      df = pd.read_csv(present_file)\n",
     "      df = cleanup_data(df)\n",
     "      # Move write cleaned-up data to destination folder\n",
     "      clean_file = os.path.join(dest_folder,f)\n",
-    "      print(clean_file)\n",
+    "      files_list.append(os.path.abspath(clean_file))\n",
     "      df.to_csv(clean_file, index=False)\n",
-    "      #print(df)\n"
+    "      #print(df)\n",
+    "files_list.sort()\n",
+    "print(files_list)"
    ]
   },
   {
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
