Update co2 supply curves for all locations

--- a/use_cases/IES_Feb23/data/data_cleaner.ipynb
+++ b/use_cases/IES_Feb23/data/data_cleaner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "case = \"NYISO_ginna\"\n",
+    "case = \"ERCOT_houston\"\n",
     "min_year = 2012\n",
     "max_year = 2021\n",
     "end_year = 2049\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,8 @@
     "  for c in df.columns:\n",
     "    if \"LBMP\" in c:\n",
     "      df.rename(columns={c:'price'}, inplace=True)\n",
+    "    elif \"price\"==c:\n",
+    "      pass\n",
     "    else:\n",
     "      todrop.append(c)\n",
     "  df.drop(columns=todrop, axis=1, inplace=True)\n",
@@ -52,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2012_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2013_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2014_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2015_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2016_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2017_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2018_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2019_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2020_ginna_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2021_ginna_DA.csv']\n"
+      "['/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2012_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2013_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2014_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2015_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2016_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2017_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2018_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2019_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2020_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2021_houston_DA.csv']\n"
      ]
     }
    ],
@@ -91,11 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['houston']\n",
+      "houston\n"
+     ]
+    }
+   ],
    "source": [
-    "plant = case.split(\"_\")[1]\n",
+    "plant = case.split(\"_\")[1:]\n",
+    "print(plant)\n",
+    "if len(plant)>1:\n",
+    "  plant = ('_').join(plant)\n",
+    "else:\n",
+    "  plant = plant[0]\n",
+    "print(plant)\n",
     "pointer_file = os.path.join(\"../train/\",\"ARMA_pointer_{}_{}_{}_{}.csv\".format(plant,str(min_year),str(max_year),data_type))\n",
     "pointer_file\n",
     "pointer_df = pd.DataFrame()\n",
