Absolute path not working on HPC, change to relative path with ~

--- a/use_cases/IES_Feb23/data/data_cleaner.ipynb
+++ b/use_cases/IES_Feb23/data/data_cleaner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,24 +13,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna\n"
+     ]
+    }
+   ],
    "source": [
-    "case = \"ERCOT_houston\"\n",
+    "case = \"NYISO_ginna\"\n",
     "min_year = 2012\n",
     "max_year = 2021\n",
     "end_year = 2049\n",
     "data_type = \"DA\"\n",
     "#case = \"NYISO_Ginna\"\n",
-    "dest_folder = os.path.join(\"./electricity_markets/\",case)\n",
+    "dest_folder = os.path.join(\"electricity_markets/\",case)\n",
     "original_data_folder = os.path.join(dest_folder,\"original_data/\")\n",
-    "original_files = os.listdir(original_data_folder)"
+    "original_files = os.listdir(original_data_folder)\n",
+    "use_case_folder_data = os.path.join(\"~\",\"FORCE\",\"use_cases\",\"IES_Feb23\",\"data\")\n",
+    "use_case_folder_data\n",
+    "print(os.path.join(use_case_folder_data,dest_folder))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2012_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2013_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2014_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2015_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2016_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2017_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2018_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2019_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2020_houston_DA.csv', '/Users/garrm/FORCE/use_cases/IES_Feb23/data/electricity_markets/ERCOT_houston/2021_houston_DA.csv']\n"
+      "['~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2012_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2013_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2014_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2015_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2016_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2017_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2018_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2019_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2020_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2021_ginna_DA.csv']\n"
      ]
     }
    ],
@@ -76,8 +87,8 @@
     "      df = pd.read_csv(present_file)\n",
     "      df = cleanup_data(df)\n",
     "      # Move write cleaned-up data to destination folder\n",
-    "      clean_file = os.path.join(dest_folder,f)\n",
-    "      files_list.append(os.path.abspath(clean_file))\n",
+    "      clean_file = os.path.join(use_case_folder_data, dest_folder,f)\n",
+    "      files_list.append(clean_file)\n",
     "      df.to_csv(clean_file, index=False)\n",
     "      #print(df)\n",
     "files_list.sort()\n",
@@ -93,15 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['houston']\n",
-      "houston\n"
+      "['ginna']\n",
+      "ginna\n"
      ]
     }
    ],
