Absolute path not working on HPC, change to relative path with ~

--- a/use_cases/IES_Feb23/data/data_cleaner.ipynb
+++ b/use_cases/IES_Feb23/data/data_cleaner.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna\n"
+      "../data/electricity_markets/NYISO_ginna\n"
      ]
     }
    ],
@@ -34,14 +34,14 @@
     "dest_folder = os.path.join(\"electricity_markets/\",case)\n",
     "original_data_folder = os.path.join(dest_folder,\"original_data/\")\n",
     "original_files = os.listdir(original_data_folder)\n",
-    "use_case_folder_data = os.path.join(\"~\",\"FORCE\",\"use_cases\",\"IES_Feb23\",\"data\")\n",
+    "use_case_folder_data = os.path.join(\"..\",\"data\")\n",
     "use_case_folder_data\n",
     "print(os.path.join(use_case_folder_data,dest_folder))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2012_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2013_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2014_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2015_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2016_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2017_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2018_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2019_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2020_ginna_DA.csv', '~/FORCE/use_cases/IES_Feb23/data/electricity_markets/NYISO_ginna/2021_ginna_DA.csv']\n"
+      "['../data/electricity_markets/NYISO_ginna/2012_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2013_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2014_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2015_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2016_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2017_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2018_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2019_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2020_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2021_ginna_DA.csv']\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
