Wrong absolute path in ARMA pointer file

--- a/use_cases/IES_Feb23/data/data_cleaner.ipynb
+++ b/use_cases/IES_Feb23/data/data_cleaner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,19 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/electricity_markets/NYISO_ginna\n"
+      "../data/electricity_markets/NYISO_nine_mile_point\n"
      ]
     }
    ],
    "source": [
-    "case = \"NYISO_ginna\"\n",
+    "case = \"ERCOT_houston\"\n",
     "min_year = 2012\n",
     "max_year = 2021\n",
     "end_year = 2049\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['../data/electricity_markets/NYISO_ginna/2012_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2013_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2014_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2015_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2016_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2017_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2018_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2019_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2020_ginna_DA.csv', '../data/electricity_markets/NYISO_ginna/2021_ginna_DA.csv']\n"
+      "['../data/electricity_markets/NYISO_nine_mile_point/2012_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2013_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2014_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2015_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2016_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2017_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2018_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2019_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2020_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2021_nine_mile_point_DA.csv']\n"
      ]
     }
    ],
@@ -104,15 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ginna']\n",
-      "ginna\n"
+      "['nine', 'mile', 'point']\n",
+      "nine_mile_point\n"
      ]
     }
    ],
