Add data and ARMA files for Cooper nuclear station SPP 2014 - 2021 DA

--- a/use_cases/IES_Feb23/data/data_cleaner.ipynb
+++ b/use_cases/IES_Feb23/data/data_cleaner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,20 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/electricity_markets/NYISO_nine_mile_point\n"
+      "../data/electricity_markets/SPP_cooper\n"
      ]
     }
    ],
    "source": [
-    "case = \"ERCOT_houston\"\n",
-    "min_year = 2012\n",
+    "case = \"SPP_cooper\"\n",
+    "min_year = 2014\n",
     "max_year = 2021\n",
     "end_year = 2049\n",
     "data_type = \"DA\"\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['../data/electricity_markets/NYISO_nine_mile_point/2012_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2013_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2014_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2015_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2016_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2017_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2018_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2019_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2020_nine_mile_point_DA.csv', '../data/electricity_markets/NYISO_nine_mile_point/2021_nine_mile_point_DA.csv']\n"
+      "['../data/electricity_markets/SPP_cooper/2014_cooper_DA.csv', '../data/electricity_markets/SPP_cooper/2015_cooper_DA.csv', '../data/electricity_markets/SPP_cooper/2016_cooper_DA.csv', '../data/electricity_markets/SPP_cooper/2017_cooper_DA.csv', '../data/electricity_markets/SPP_cooper/2018_cooper_DA.csv', '../data/electricity_markets/SPP_cooper/2019_cooper_DA.csv', '../data/electricity_markets/SPP_cooper/2020_cooper_DA.csv', '../data/electricity_markets/SPP_cooper/2021_cooper_DA.csv']\n"
      ]
     }
    ],
@@ -104,15 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['nine', 'mile', 'point']\n",
-      "nine_mile_point\n"
+      "['cooper']\n",
+      "cooper\n"
      ]
     }
    ],
