--- a/use_cases/IES_Feb23/data/data_cleaner.ipynb
+++ b/use_cases/IES_Feb23/data/data_cleaner.ipynb
@@ -20,13 +20,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/electricity_markets/MISO_prairie_island_1\n"
+      "../data/electricity_markets/PJM_braidwood\n"
      ]
     }
    ],
    "source": [
-    "case = \"MISO_prairie_island_1\"\n",
-    "min_year = 2013\n",
+    "case = \"PJM_braidwood\"\n",
+    "min_year = 2020\n",
     "max_year = 2021\n",
     "end_year = 2049\n",
     "data_type = \"DA\"\n",
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['../data/electricity_markets/MISO_prairie_island_1/2013_prairie_island_1_DA.csv', '../data/electricity_markets/MISO_prairie_island_1/2014_prairie_island_1_DA.csv', '../data/electricity_markets/MISO_prairie_island_1/2015_prairie_island_1_DA.csv', '../data/electricity_markets/MISO_prairie_island_1/2016_prairie_island_1_DA.csv', '../data/electricity_markets/MISO_prairie_island_1/2017_prairie_island_1_DA.csv', '../data/electricity_markets/MISO_prairie_island_1/2018_prairie_island_1_DA.csv', '../data/electricity_markets/MISO_prairie_island_1/2019_prairie_island_1_DA.csv', '../data/electricity_markets/MISO_prairie_island_1/2020_prairie_island_1_DA.csv', '../data/electricity_markets/MISO_prairie_island_1/2021_prairie_island_1_DA.csv']\n"
+      "['../data/electricity_markets/PJM_braidwood/2020_Braidwood_DA.csv', '../data/electricity_markets/PJM_braidwood/2021_Braidwood_DA.csv']\n"
      ]
     }
    ],
@@ -111,8 +111,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['prairie', 'island', '1']\n",
-      "prairie_island_1\n"
+      "['braidwood']\n",
+      "braidwood\n"
      ]
     }
    ],
